# shodh-redb

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT-BFTREE  LIMITATIONS.md  README.md  justfile
.github/workflows/: bench.yml  ci.yml  nightly.yml
benches/: criterion_blob.rs  criterion_ivfpq.rs  criterion_kv.rs  criterion_vector_ops.rs
crates/bf-tree/: Cargo.toml  LICENSE.txt  README.md
crates/bf-tree/src/: config.rs  error.rs  lib.rs  mini_page_op.rs  range_scan.rs  sample_config.toml  snapshot.rs  storage.rs  sync.rs  tree.rs
crates/bf-tree/src/circular_buffer/: freelist.rs  metrics.rs  mod.rs
crates/bf-tree/src/fs/: io_uring_vfs.rs  memory_vfs.rs  mod.rs  spdk_vfs.rs  std_direct_vfs.rs  std_vfs.rs  write_through_vfs.rs
crates/bf-tree/src/metric/: counter.rs  histogram.rs  mod.rs  recorders.rs  timer.rs
crates/bf-tree/src/nodes/: inner_node.rs  leaf_node.rs  node_meta.rs  page_id.rs
crates/bf-tree/src/tests/: concurrent.rs  inner_node.rs  leaf_node.rs  tree.rs
crates/bf-tree/src/utils/: atomic_wait.rs  crc32.rs  inner_lock.rs  mapping_table.rs  mod.rs  rw_lock.rs  stats.rs
crates/bf-tree/src/wal/: mod.rs  operations.rs
crates/bf-tree/tests/: no_std_smoke.rs
crates/redb-bench/: Cargo.toml
crates/redb-bench/benches/: bftree_benchmark.rs  blob_benchmark.rs  recall_benchmark.rs  vector_ops_benchmark.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  fuzz_bftree.rs  fuzz_blob_types.rs  fuzz_cdc_deser.rs  fuzz_cluster_blob.rs  fuzz_fractal_types.rs  fuzz_incremental_deser.rs  fuzz_ivfpq_index.rs  fuzz_ivfpq_kmeans.rs  fuzz_merge_ops.rs  fuzz_pq_codebook.rs  fuzz_quantization.rs  fuzz_redb.rs  fuzz_vector_ops.rs
src/: backends.rs  complex_types.rs  db.rs  error.rs  group_commit.rs  incremental.rs  integrity_scanner.rs  legacy_tuple_types.rs  lib.rs  merge.rs  multimap_table.rs  observer.rs  probe_select.rs  storage_traits.rs  table.rs  transaction_tracker.rs  transactions.rs  ttl_table.rs  tuple_types.rs  types.rs  vector.rs  vector_ops.rs
src/bf_tree/: config.rs  error.rs  mini_page_op.rs  mod.rs  range_scan.rs  sample_config.toml  snapshot.rs  storage.rs  tree.rs
src/bf_tree/circular_buffer/: freelist.rs  mod.rs
src/bf_tree/fs/: io_uring_vfs.rs  memory_vfs.rs  mod.rs  std_direct_vfs.rs  std_vfs.rs  write_through_vfs.rs
src/bf_tree/metric/: counter.rs  histogram.rs  mod.rs  recorders.rs  timer.rs
src/bf_tree/nodes/: inner_node.rs  leaf_node.rs  mod.rs  node_meta.rs  page_id.rs
src/bf_tree/tests/: concurrent.rs  crash_recovery.rs  inner_node.rs  leaf_node.rs  mod.rs  tree.rs
src/bf_tree/utils/: atomic_wait.rs  inner_lock.rs  mapping_table.rs  mod.rs  rw_lock.rs  stats.rs  test_util.rs
src/bf_tree/wal/: mod.rs  operations.rs
src/bf_tree_store/: adapter.rs  blob.rs  buffered_txn.rs  config.rs  database.rs  error.rs  group_commit.rs  history.rs  mod.rs  multimap.rs  stress.rs  table.rs  transaction.rs  ttl.rs  unified.rs  value_indirection.rs  verification.rs
src/blob_store/: mod.rs  reader.rs  types.rs  writer.rs
src/cdc/: mod.rs  types.rs
src/composite/: mod.rs  provider.rs  query.rs  scoring.rs  types.rs
src/fractal/: cluster.rs  config.rs  index.rs  mod.rs  search.rs  types.rs
src/ivfpq/: adc.rs  cluster_blob.rs  config.rs  index.rs  kmeans.rs  metadata.rs  mod.rs  pq.rs  types.rs
src/temporal/: hlc.rs
src/tree_store/: btree.rs  btree_base.rs  btree_iters.rs  btree_mutator.rs  mod.rs  read_verify.rs  table_tree.rs  table_tree_base.rs
src/tree_store/page_store/: backends.rs  base.rs  bitmap.rs  buddy_allocator.rs  cached_file.rs  compression.rs  header.rs  layout.rs  mod.rs  page_manager.rs  region.rs  savepoint.rs  xxh3.rs
src/tree_store/page_store/file_backend/: fallback.rs  optimized.rs
src/tree_store/page_store/flash_backend/: bad_block.rs  ftl.rs  hardware.rs  journal.rs  mod.rs  wear_leveling.rs
src/types/: chrono_v0_4.rs  uuid.rs
src/vector_ops/: simd_x86.rs
tests/: audit_hardening_tests.rs  bf_tree_integration_tests.rs  blob_compaction_tests.rs  blob_tests.rs  btree_invariant_tests.rs  cdc_edge_tests.rs  cdc_tests.rs  composite_tests.rs  concurrent_stress_tests.rs  coverage_gap_tests.rs  crash_recovery_tests.rs  flash_backend_tests.rs  fractal_tests.rs  hardening_phase6_tests.rs  history_tests.rs  integration_tests.rs  ivfpq_recall_tests.rs  ivfpq_tests.rs  memory_budget_tests.rs  no_std_surface_tests.rs  proptest_tests.rs  read_verify_tests.rs  resource_exhaustion_tests.rs  simd_parity_tests.rs  smoke_tests.rs  soak_tests.rs  soc_compliance_tests.rs  verify_integrity_concurrent.rs
