[package]
name = "shodh-redb"
description = "Multi-modal embedded database - vectors, blobs, TTL, merge operators, and causal tracking built on ACID B-trees"
readme = "README.md"
version = "0.4.0"
exclude = ["fuzz/", "data/"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["database", "embedded", "vector", "blob", "no_std"]
categories = ["database-implementations", "data-structures", "no-std"]

[workspace]
members = [".", "crates/redb-bench", "crates/redb-cli", "crates/redb-derive", "crates/redb-python"]
default-members = [".", "crates/redb-derive"]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
homepage = "https://github.com/varun29ankuS/shodh-redb"
repository = "https://github.com/varun29ankuS/shodh-redb"
authors = ["Varun Sharma"]

[dependencies]
log = { version = "0.4.17", optional = true }
chrono_v0_4 = { package = "chrono", version= "0.4.41", optional = true }
uuid = { version= "1.17.0", optional = true }
lz4_flex = { version = "0.11.5", optional = true }
sha2 = { version = "0.10", default-features = false }
zstd = { version = "0.13.3", optional = true, default-features = false }
hashbrown = "0.15"
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "portable-atomic"] }

[target.'cfg(target_os = "wasi")'.dependencies]
libc = "0.2.174"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6.4", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.174", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", optional = true, features = [
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

# Common test/bench dependencies
[dev-dependencies]
rand = "0.10.0"
tempfile = "3.5.0"
# for backwards compatibility testing - pin at 2.6.0
redb2_6 = { version = "=2.6.0", package = "redb" }
bincode = "2.0.1"
uuid = { version= "1.17.0", features = ["v4"] }
shodh-redb-derive = { version = "0.1.0", path = "./crates/redb-derive" }
criterion = { version = "0.5", default-features = false }
proptest = "1"

[[bench]]
name = "criterion_kv"
harness = false

[[bench]]
name = "criterion_blob"
harness = false

[[bench]]
name = "criterion_vector_ops"
harness = false

[[bench]]
name = "criterion_ivfpq"
harness = false

[features]
default = ["std"]
# Enable std library support (file backends, group commit, TTL, full error types)
std = []
# Enables log messages
logging = ["dep:log"]
# Enable cache hit metrics
cache_metrics = []
# Enable database-wide metrics (transaction counts, write amplification, etc.)
metrics = ["cache_metrics"]
# Enable LZ4 page compression
compression_lz4 = ["dep:lz4_flex"]
# Enable zstd page compression
compression_zstd = ["dep:zstd"]
# Enable all compression algorithms
compression = ["compression_lz4", "compression_zstd"]

[profile.bench]
debug = true

[lints.clippy]
big_endian_bytes = "deny"
dbg_macro = "deny"
host_endian_bytes = "deny"
